2009-06-01  Kenneth Rohde Christiansen  <kenneth.christiansen@openbossa.org>

        Reviewed by Simon Hausmann.

        Refactor the Qt plugin code to use NPP_SetWindow correctly,
        to make resizing of plugins work.

        Attention was paid to make sure that the windowed plugins scroll
        synchronized with the page view. A manual test has been added.

        * manual-tests/qt/plugin-iframe.html: Added.
        * plugins/PluginView.cpp:
        (WebCore::PluginView::setFrameRect):
        (WebCore::PluginView::frameRectsChanged):
        * plugins/PluginView.h:
        * plugins/qt/PluginContainerQt.cpp:
        (PluginContainerQt::PluginContainerQt):
        * plugins/qt/PluginContainerQt.h:
        * plugins/qt/PluginPackageQt.cpp:
        (WebCore::PluginPackage::load):
        * plugins/qt/PluginViewQt.cpp:
        (WebCore::PluginView::updatePluginWidget):
        (WebCore::PluginView::paint):
        (WebCore::PluginView::setParent):
        (WebCore::PluginView::setNPWindowRect):
        (WebCore::PluginView::setNPWindowIfNeeded):
        (WebCore::PluginView::handlePostReadFile):
        (WebCore::PluginView::getValue):
        (WebCore::PluginView::invalidateRect):
        (WebCore::PluginView::init):

2009-06-02  Darin Adler  <darin@apple.com>

        Reviewed by David Hyatt.

        Bug 26112: viewless WebKit -- make events work
        https://bugs.webkit.org/show_bug.cgi?id=26112

        The main fix here is to make mouse and wheel event coordinates in the coordinate
        system of the top level NSView rather than the NSWindow when in the viewless mode.
        This is the design Hyatt chose, but the event part of it wasn't done yet.

        Also fix FrameView to do normal reference counting instead of a strange model with
        an explicit deref near creation time.

        * WebCore.base.exp: Updated.

        * page/EventHandler.cpp:
        (WebCore::EventHandler::eventLoopHandleMouseUp): Moved this function into the file